--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Text-ASCIIMathML
-version:      0.7
-version_from: lib/Text/ASCIIMathML.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+--- #YAML:1.0
+name:                Text-ASCIIMathML
+version:             0.8
+abstract:            Perl implementation of ASCIIMathML parser
+license:             ~
+author:              
+    - Mark Nodine <mnodine@alum.mit.edu>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
